<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#533E2A"


    >

    <TableLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:padding="15dp"

        >


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

     >

        <TextView

            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:background="@drawable/rita"

            />

            </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"


            >
            <TextView

                android:text= "@string/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/cajaform"
                android:elevation="4dp"
                android:paddingLeft="15dp"
              />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/dd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:inputType="textPassword"

                android:background="@drawable/cajaform"
                android:elevation="4dp"

                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/botn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            >


            <Button

                android:id="@+id/btnInicioSesion"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="#EA8A31"
                android:text="@string/inicio_sesion"
                android:textSize="20dp" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"

            >


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"


                />



        </LinearLayout>




    </TableLayout>
</ScrollView>

